menu creation and menu & home responsive

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,7 +11,7 @@
         <br />
         Vol.2 -
     </div>
-    <div class="burger-menu">
+    <div class="burger-menu" (click)="openCloseMenu()">
         <div class="burger-line"></div>
         <div class="burger-line"></div>
     </div>
@@ -29,7 +29,7 @@
         <br />
         Vol.2 -
     </div>
-    <div class="burger-menu">
+    <div class="burger-menu" (click)="openCloseMenu()">
         <div class="white-burger-line"></div>
         <div class="white-burger-line"></div>
     </div>
