--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,7 +18,7 @@
 <body>
   <div class="home">
     <header>
-      <app-header></app-header>
+      <app-header [isWhite]="isMenuAnimationActive" (menu)="showMenu()"></app-header>
     </header>
     <div class="title">
       <div class="txt-my">
@@ -31,14 +31,18 @@
     <nav>
       <app-navbar (pageRedirect)="redirectNav($event)"></app-navbar>
     </nav>
+    <div class="menu" [class.active]="isMenuAnimationActive">
+      <app-menu (pageRedirect)="redirectMenu($event)"></app-menu>
+    </div>
     <img [src]="pixel"/>
+    <div class="menu-animation-bar" [class.active]="isMenuAnimationActive"></div>
     <div class="nav-animation-bar" [class.active]="isAnimationActive"></div>
     <p class="fact">I enjoy conceptualizing ideas and bringing them to life, nurturing them from inception into impactful and memorable accomplishments.</p>
     <div class="image">
       <!--<img loading="lazy" src="../../assets/img/main-pfp.png" class="img"/>-->
       <img loading="lazy" [src]="img" class="img"/>
     </div>
-    <p class="footer">just an ordinary designer and developer</p>
+    <p class="footer" [class.active]="isMenuAnimationActive">just an ordinary designer and developer</p>
   </div>
   <div class="mobile-responsive">
     <p>yep, I'm currently working on <span class="f-secondary">mobile responsive,</span> it will be better if you open it in your computer, please :)</p>
