--- a/src/app/home/responsive.css
+++ b/src/app/home/responsive.css
@@ -62,6 +62,10 @@
 
 
 @media screen and (max-width: 990px) {
+    header {
+        z-index: 4;
+    }
+    
     .nav-animation-bar {
         display: none;
     }
@@ -93,8 +97,11 @@
     }
 
     .image {
-        margin-bottom: 140px;
-        width: 500px;
+        margin-bottom: 140px;        
+    }
+    
+    .image img {
+        width: 300px;
     }
 
     .footer {
