--- a/src/app/my-works/animations.css
+++ b/src/app/my-works/animations.css
@@ -1,5 +1,5 @@
 .nav-animation-bar {
-    z-index: 3;
+    z-index: 4;
     display: flex;
     align-self: center;
     justify-content: center;
@@ -33,10 +33,63 @@
 .nav-animation-bar.active::before,
 .nav-animation-bar.active::after {
     transform: scaleY(1);
-    z-index: 5;
 }
 
 .nav-animation-bar.disactive::before,
 .nav-animation-bar.disactive::after {
     transform: scaleY(0);
+}
+
+.menu-animation-bar {
+    z-index: 3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background 6s ease;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 101vh;
+    width: 100%;
+}
+
+.menu-animation-bar::before,
+.menu-animation-bar::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    transform-origin: 100% 0%;
+    transform: scaleY(0);
+    transition: transform 1.6s ease;
+}
+
+.menu-animation-bar::before {
+    background: linear-gradient(to top, #000 0%, #000 50%, transparent 50%, transparent 100%);
+}
+
+.menu-animation-bar::after {
+    background: linear-gradient(to bottom, #000 0%, #000 60%, transparent 50%, transparent 100%);
+}
+
+.menu-animation-bar.active::before,
+.menu-animation-bar.active::after {
+    transform: scaleY(1);
+}
+
+.menu-animation-bar.active .footer {
+    color: white;
+    z-index: 4;
+}
+
+.footer.active {
+    color: white;
+    z-index: 4;
+}
+
+.menu.active {
+    opacity: 1;
+    display: flex;
 }
