--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -123,7 +123,7 @@ nav {
 .menu {
   opacity: 0;
   transition: opacity 1s ease-out;
-  display: flex;
+  display: none;
   position: absolute;
   margin-bottom: 100px;
   z-index: 4;
@@ -180,4 +180,5 @@ nav {
 }
 .menu.active {
   opacity: 1;
+  display: flex;
 }
