--- a/src/app/home/responsive.css
+++ b/src/app/home/responsive.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 1740px) {
+@media screen and (min-width: 1740px) {
     .title {
         margin-top: 0px;
 
@@ -12,11 +12,29 @@
     }
 
     .image img {
-        width: 380px;
+        width: 400px;
     }
 }
 
-@media screen and (max-width: 1400px) {
+@media screen and (max-width: 1740px) {
+    .title {
+        margin-top: 0px;
+
+        .txt-my {
+            font-size: 160px;
+        }
+
+        .txt-section {
+            font-size: 140px;
+        }
+    }
+
+    .image img {
+        width: 350px;
+    }
+}
+
+@media screen and (max-width: 1440px) {
     .title {
         margin-top: 0px;
 
@@ -72,7 +90,6 @@
 
     .title {
         flex-direction: column;
-        margin-top: 40px;
 
         .txt-my {
             font-size: 120px;
@@ -108,34 +125,45 @@
         margin-bottom: 70px;
     }
 
+}
 
+@media screen and (max-height: 850px) and (max-width: 400px) {
+    .title {
+        .txt-my {
+            font-size: 100px;
+        }
 
-
-    /*.mobile-responsive {
-        opacity: 1;
-        position: fixed;
-        top: 0;
-        left: 0;
-        height: 100vh;
-        width: 100vw;
-        z-index: 1000;
-        background-color: #1e1e1e;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        .txt-section {
+            font-size: 70px;
+        }
     }
 
-    .mobile-responsive p {
-        padding: 0 20px;
-        color: #EBEBEB;
-        text-align: center;
-        margin: auto 0;
-        font: 400 24px Inter, sans-serif;
+
+    .image {
+        margin-bottom: 120px;
     }
 
-    .f-secondary {
-        text-align: center;
-        font: 400 26px 'Shadows Into Light Two', -apple-system, Roboto, Helvetica,
-            sans-serif;
-    }*/
+    .image img {
+        width: 280px;
+    }
+}
+
+@media screen and (max-height: 750px) and (max-width: 400px) {
+    .title {
+        .txt-my {
+            font-size: 90px;
+        }
+
+        .txt-section {
+            font-size: 70px;
+        }
+    }
+
+    .fact {
+        font-size: 16px;
+    }
+
+    .image img {
+        width: 250px;
+    }
 }
