--- a/src/app/my-works/my-works.component.css
+++ b/src/app/my-works/my-works.component.css
@@ -82,7 +82,6 @@ nav {
     bottom: 0;
     position: absolute;
     max-width: 95%;
-    overflow-y: auto;
     z-index: 0;
     margin-bottom: 8px;
 
@@ -110,7 +109,6 @@ nav {
     .works-year {
         display: flex;
         flex-direction: column;
-        align-self: left;
         margin-bottom: 10px;
         padding: 0;
         position: relative;
@@ -171,4 +169,27 @@ nav {
 ::-webkit-scrollbar-thumb {
     background: #cecbcb;
     border-radius: 15px;
+}
+
+.menu {
+    opacity: 0;
+    display: none;
+    transition: opacity 1s ease-out;
+    position: fixed;
+    /*margin-bottom: 100px;*/
+    top: 30%;
+    left: 0;
+    right: 10%;
+    z-index: 6;
+    width: 100%;
+    justify-content: right;
+    padding-right: 80px;
+}
+
+.menu-content {
+    padding-right: 40px;
+}
+
+.works-index.active {
+    z-index: 0;
 }
